--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
   datasource:
-    name: demo
-    url: jdbc:mysql://127.0.0.1:3306/demo?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&allowMultiQueries=true&serverTimezone=GMT%2B8
+    name: todolist
+    url: jdbc:mysql://127.0.0.1:3306/todolist?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&allowMultiQueries=true&serverTimezone=GMT%2B8
     username: root
     password: ysw12138
     # 使用druid数据源
@@ -12,9 +12,10 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jackson:
     default-property-inclusion: non_null
-
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
 
 mybatis:
-  type-aliases-package: com.example.demo.model
+  type-aliases-package: com.yangshiwei.todolist.model
   configuration:
     map-underscore-to-camel-case: true
