--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,12 @@
 server:
-  port: 8081
+  port: 8094
 
 spring:
   datasource:
     name: todolist
     url: jdbc:mysql://127.0.0.1:3306/todolist?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&allowMultiQueries=true&serverTimezone=GMT%2B8
     username: root
-    password: ysw12138
-    # 使用druid数据源
+    password: "@Root_12138"
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
   jackson:
